# Trad-Chem

./: .gitignore  .netlifyignore  CITATION.cff  COLAB_INSTALLATION_GUIDE.md  COLAB_INTEGRATION.md  CONTRIBUTING.md  CONTRIBUTING_DATA.md  CONTRIBUTING_PYTHON_PACKAGE.md  INTEGRATION_EXAMPLE.py  LLM_INTEGRATION_DEMO.py  MANIFEST.in  PACKAGE_RELEASE_NOTES.md  README.md  SUPABASE_README.md  colab_clean_install.py  colab_install.py  colab_quick_install.py  colab_simple_install.py  create-frontend-branch.md  demo.py  demo_contribution.py  deploy-frontend-only.md  deploy-supabase.sh  deploy-to-netlify.sh  docker-compose.yml  final_verification.py  netlify-deploy-guide.md  netlify.toml  package.json  pyproject.toml  requirements.txt  run_server.py  setup.py  supabase-setup-guide.md  test_database.py
.github/ISSUE_TEMPLATE/: add_medicine_data.md
.github/workflows/: netlify-deploy.yml
Trad-Chem/Ayurvedic_Medicine/: Kameshwari_Rasayanaya.py  madana_modhaka.json  madana_modhaka.py
colab_examples/: README.md  TRADCHEM_KNOWLEDGE_GRAPH.md  quick_start.py  quick_start_with_data.py  sample_medicines.csv  sample_medicines.json
contributions/: README.md  demo_contribution.csv  demo_contribution.json
contributions/examples/: ayurvedic_examples.csv  tcm_examples.csv
contributions/guidelines/: citation_standards.md  data_quality.md  smiles_guidelines.md
contributions/templates/: medicine_template.csv  medicine_template.json
examples/: llm_integration_example.py  sample_medicines.csv
netlify-deploy/: netlify.toml
netlify-deploy/js/: app.js
netlify/functions/: api.py  requirements.txt
supabase/: client.js  config.toml
supabase/functions/chat/: index.ts
supabase/migrations/: 001_initial_schema.sql
tradchem/: __init__.py  cli.py  cli_backup.py  init.py  tradchem.py  version.py
tradchem/data/: __init__.py  tradchem_database.json
tradchem/medicine_systems/: __init__.py  ayurvedic.py  init.py
tradchem/tests/: init.py  test_tradchem.py  test_tradchem_backup.py
tradchem/utils/: __init__.py  data_utils.py  smiles_utils.py
tradchem_llm/: README.md  __init__.py  config.py  database.py  main.py  models.py  requirements.txt
tradchem_llm/services/: __init__.py  chat_service.py  llm_service.py  tradchem_service.py
tradchem_llm/static/: index.html
tradchem_llm/static/js/: app.js
